// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Location Tabs Renders Location Tabs with Mock Data 1`] = `
<React.Fragment>
  <LocationHeader
    details="2 [missing \\"en.LOCATION.ITEMS\\" translation], 3 [missing \\"en.LOCATION.PALLETS\\" translation]"
    location="[missing \\"en.LOCATION.SECTION\\" translation] G - GroceryAisle 1-Section 1"
  />
  <MaterialTopTabNavigator
    tabBarOptions={
      Object {
        "activeTintColor": "#0071e9",
        "inactiveTintColor": "#616161",
        "indicatorStyle": Object {
          "backgroundColor": "#0071e9",
        },
        "style": Object {
          "backgroundColor": "#ffffffff",
        },
      }
    }
  >
    <Screen
      component={[Function]}
      name="FloorDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.FLOORS\\" translation] (2)",
        }
      }
    />
    <Screen
      component={[Function]}
      name="ReserveDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.RESERVES\\" translation] (3)",
        }
      }
    />
  </MaterialTopTabNavigator>
</React.Fragment>
`;

exports[`Test Location Tabs Renders Location Tabs with Mock Empty Data 1`] = `
<React.Fragment>
  <LocationHeader
    details="0 [missing \\"en.LOCATION.ITEMS\\" translation], 0 [missing \\"en.LOCATION.PALLETS\\" translation]"
    location="[missing \\"en.LOCATION.SECTION\\" translation] G - GroceryAisle 1-Section 1"
  />
  <MaterialTopTabNavigator
    tabBarOptions={
      Object {
        "activeTintColor": "#0071e9",
        "inactiveTintColor": "#616161",
        "indicatorStyle": Object {
          "backgroundColor": "#0071e9",
        },
        "style": Object {
          "backgroundColor": "#ffffffff",
        },
      }
    }
  >
    <Screen
      component={[Function]}
      name="FloorDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.FLOORS\\" translation] (0)",
        }
      }
    />
    <Screen
      component={[Function]}
      name="ReserveDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.RESERVES\\" translation] (0)",
        }
      }
    />
  </MaterialTopTabNavigator>
</React.Fragment>
`;

exports[`Test Location Tabs Renders Location Tabs with Mock Large Location Data 1`] = `
<React.Fragment>
  <LocationHeader
    details="100 [missing \\"en.LOCATION.ITEMS\\" translation], 100 [missing \\"en.LOCATION.PALLETS\\" translation]"
    location="[missing \\"en.LOCATION.SECTION\\" translation] G - GroceryAisle 1-Section 1"
  />
  <MaterialTopTabNavigator
    tabBarOptions={
      Object {
        "activeTintColor": "#0071e9",
        "inactiveTintColor": "#616161",
        "indicatorStyle": Object {
          "backgroundColor": "#0071e9",
        },
        "style": Object {
          "backgroundColor": "#ffffffff",
        },
      }
    }
  >
    <Screen
      component={[Function]}
      name="FloorDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.FLOORS\\" translation] (100)",
        }
      }
    />
    <Screen
      component={[Function]}
      name="ReserveDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.RESERVES\\" translation] (100)",
        }
      }
    />
  </MaterialTopTabNavigator>
</React.Fragment>
`;
